<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">简e智居</string>
    <string name="hello_world">Hello world!</string>
    <string name="url_server">http://semsplus.cn/ble/version.xml</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_company">ShowCompanyActivity</string>
    <string name="title_activity_equipment_management">EquipmentManagementActivity</string>
    <string name="showcompany_modulename">简e智居</string>
    <string name="showcompany_companyname"></string>
    <string name="unknown_device">未知设备</string>
    <string name="equipmentmanagement">设备管理</string>
    <string name="title_activity_addequiment">AddequimentActivity</string>
    <string name="addequiment">设备新增</string>
    <string name="device_channel">设备频道：</string>
    <string name="device_key">操作密钥：</string>
    <string name="device_key_new">&#160;&#160;&#160;&#160;新密钥：</string>
    <string name="device_context">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;备注：</string>
    <string name="title_activity_edit_equiment">EditEquimentActivity</string>
    <string name="equimentedit">设备编辑</string>
    <string name="title_activity_operating">OperatingActivity</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="moresetting">更多设置</string>
    <string name="operatequ">设备操作</string>
    <string name="back">←</string>
    <string name="add">＋</string>
    <string name="left_bar">≡</string>
    <string name="edit">⌲</string>
    <string name="saveequ">保存</string>
    <string name="savefromscan">从扫描添加</string>
    <string name="equnull">蓝牙不可用</string>
    <string name="not_connected">设备未连接-点击图片可重连</string>
    <string name="bt_not_enabled_leaving">蓝牙设备不存在</string>
    <string name="controltype">控制方式</string>
    <string name="jog">4键</string>
    <string name="linkage">1键</string>
    <string name="deleteequ">删除设备</string>
    <string name="deviceState0">未连接-点击图片可重连</string>
    <string name="deviceState1">已连接</string>
    <string name="deviceState2">连接失败-点击图片可重连</string>
    <string name="deviceState3">正在连接</string>
    <string name="deviceState4">正在重启蓝牙</string>
    <string name="equexist">设备已存在</string>
    <string name="keynonull">密钥不能为空</string>
    <string name="keytolong">密码长度不能超过16位数字</string>
    <string name="editKey">修改</string>
    <string name="version_unknown">未知版本</string>
    <string name="refresh">刷新</string>
    <string name="editkey_ok">修改密码成功</string>
    <string name="editkey_false">修改密码失败</string>
    <string name="key_rong">密码校验错误，请修改密码！</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="keynoempty">密码不能为空</string>
    <string name="devicelock">设备已锁定，请按暂停键解锁！</string>
    <string name="putpwdagain">再一次输入确认密码</string>
    <string name="pwdok">密码已经设置</string>
    <string name="retrypwd">两次密码不匹配，请重新设置</string>
    <string name="pwderror">密码错误</string>
    <string name="cutpic">剪裁图片</string>
    <string name="downfail">下载新版本失败</string>
    <string name="btnoexist">本机没有找到蓝牙硬件或驱动！</string>
    <string name="nobt">没有蓝牙</string>
    <string name="devicenosupport">设备不支持</string>
    <string name="getservicefail">获取服务器更新信息失败</string>
    <string name="notneedupdate">已经是最新版本，不需要更新</string>
    <string name="forgetpwd">忘记手势密码？请卸载重装！</string>
    <string name="handpwd">请输入手势密码</string>
    
    

    <!-- Accessibility description sent when user starts drawing a lock pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <!-- Accessibility description sent when the pattern times out and is cleared. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <!-- Accessibility description sent when user adds a cell to the pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <!-- Accessibility description sent when user completes drawing a pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="title_activity_set_lock">SetLockActivity</string>
    <string name="title_activity_list_device">ListDeviceActivity</string>
    <string name="title_activity_operating_linkage">OperatingLinkageActivity</string>

</resources>
