<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/content_frame"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@color/top" >

                <TextView
                    android:id="@+id/left_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                     android:gravity="center"
                    android:clickable="true"
                    android:text="@string/left_bar"
                    android:textColor="@color/switch_thumb_material_light"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/equipmentmanagement"
                    android:textColor="@color/switch_thumb_material_light"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/add_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="addequiment"
                    android:text="@string/add"
                    android:textColor="@color/switch_thumb_material_light"
                    android:textSize="30sp" />
            </RelativeLayout>

            <ListView
                android:id="@id/android:list"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:drawSelectorOnTop="false" />

            <TextView
                android:id="@id/android:empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="当前无设备!"
                android:textSize="20sp" />
        </LinearLayout>

        <!-- The navigation drawer -->

        <LinearLayout
            android:id="@+id/right_drawer"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/left"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        		android:layout_marginTop="30dp"
                android:gravity="center"
       			android:layout_gravity="center_horizontal"
                android:background="@drawable/menu_icon80x80" />

            <ListView
                android:id="@+id/left_drawer"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:choiceMode="singleChoice"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"
                android:paddingTop="30dp" />
        </LinearLayout>
    </android.support.v4.widget.DrawerLayout>

</LinearLayout>